--- a/.editorconfig
+++ b/.editorconfig
@@ -5,5 +5,12 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{lua,xml}]
+indent_style = tab
+
+[*.{yml,yaml}]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
