--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,9 +3,9 @@ name: Lint
 on: pull_request
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-
+    steps:
     - name: Run luacheck
       uses: nebularg/actions-luacheck@v1
       with:
