--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,6 +6,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/Checkout@v2
     - name: Run luacheck
       uses: nebularg/actions-luacheck@v1
       with:
