--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,13 @@ root = true
 charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.{lua,xml}]
 indent_style = tab
 
-[*.{yml,yaml}]
+[*.{yml,yaml,pkgmeta}]
 indent_style = space
 indent_size = 2
 
 [*.md]
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = false
